// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Button snapshots collection is Button changed 1`] = `
<div>
  <button
    class="button-wrapper"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Check Button snapshots collection is Button changed? 1`] = `
<div>
  <button
    class="button-wrapper"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Check Button snapshots collection is Button with Form and onClick props changed 1`] = `
<div>
  <div>
    <div
      class="input-wrapper"
    >
      <div
        class="input-element-wrapper required"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="input-element"
          form="test"
          name="in"
          value=""
        />
      </div>
    </div>
    <button
      class="button-wrapper disabled"
      type="button"
    >
      test
    </button>
  </div>
</div>
`;

exports[`Check Button snapshots collection is Button with Form and onClick props changed? 1`] = `
<div>
  <div>
    <div
      class="input-wrapper"
    >
      <div
        class="input-element-wrapper required"
      >
        <input
          aria-invalid="false"
          aria-required="true"
          class="input-element"
          form="test"
          name="in"
          value=""
        />
      </div>
    </div>
    <button
      class="button-wrapper disabled"
      type="button"
    >
      test
    </button>
  </div>
</div>
`;

exports[`Check Button snapshots collection is Button with isDisabled attributes changed? 1`] = `
<div>
  <button
    class="button-wrapper disabled"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Check Button snapshots collection is Button with isDisabled changed 1`] = `
<div>
  <button
    class="button-wrapper disabled"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Check Button snapshots collection is Button with isLoading attributes changed? 1`] = `
<div>
  <button
    class="button-wrapper loading"
    type="button"
  >
    test
  </button>
</div>
`;

exports[`Check Button snapshots collection is Button with isLoading changed 1`] = `
<div>
  <button
    class="button-wrapper loading"
    type="button"
  >
    test
  </button>
</div>
`;
